--- a/backend/client/public/index.html
+++ b/backend/client/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>Shop App</title>
+  <title>Gossip Shopping Detail App</title>
 </head>
 
 <body>
